[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_stab.png" type="Texture" id=2]
[ext_resource path="res://characters/Player/Sprites/slash effect.png" type="Texture" id=3]
[ext_resource path="res://characters/Player/Weapon.gd" type="Script" id=4]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_walk.png" type="Texture" id=5]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_jump.png" type="Texture" id=6]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_idle.png" type="Texture" id=7]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_hurt.png" type="Texture" id=8]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_dead.png" type="Texture" id=9]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_upstab.png" type="Texture" id=10]
[ext_resource path="res://characters/Player/Sprites/sheet_hero_duck.png" type="Texture" id=11]
[ext_resource path="res://characters/Player/sounds/sfx_wpn_dagger.wav" type="AudioStream" id=12]
[ext_resource path="res://characters/Player/sounds/sfx_damage_hit1.wav" type="AudioStream" id=13]
[ext_resource path="res://characters/Player/sounds/footsteps.wav" type="AudioStream" id=14]
[ext_resource path="res://characters/Player/sounds/jump.wav" type="AudioStream" id=15]
[ext_resource path="res://characters/Player/sounds/sfx_deathscream_android8.wav" type="AudioStream" id=16]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 8.0

[sub_resource type="Animation" id=2]

resource_name = "invulnerable"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.320313, 0.320313, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 3.5
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Die:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Jump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 11 ), Vector2( 0, 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Jump:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]

length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Hurt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Hurt:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "recover"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Hurt:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sound/Hurt:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Jump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 8 ), Vector2( 0, 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Jump:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sound/Jump:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]

length = 0.4
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Stab:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 4, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Stab:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Stab/StabEffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Stab/StabEffect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14, 7 ), Vector2( 14, 7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Stab/Slash:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Stab/Slash:position")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14, -15 ), Vector2( 17, -15 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Stab/Slash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/Stab/Slash/Weapon:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sound/Stab:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.26 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]

length = 0.3
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sound/Footsteps:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]

use_parent_material = true
input_pickable = false
collision_layer = 2
collision_mask = 25
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
airborne_attack_limit = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, 17 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Invincible" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/invulnerable = SubResource( 2 )
blend_times = [  ]

[node name="Anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/die = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/stab = SubResource( 8 )
anims/walk = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="InvincibilityTimer" type="Timer" parent="." index="3"]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = false

[node name="HealthBar" type="Label" parent="." index="4"]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "test"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Node2D" parent="." index="5"]

position = Vector2( 0, 15 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Stab" type="Sprite" parent="Sprite" index="0"]

visible = false
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
hframes = 5
frame = 4
_sections_unfolded = [ "Animation", "Transform", "Visibility", "Z Index" ]

[node name="Slash" type="Sprite" parent="Sprite/Stab" index="0"]

visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 17, -15 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Animation", "Material", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Weapon" type="Area2D" parent="Sprite/Stab/Slash" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
collision_layer = 2
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform", "Visibility", "Z Index" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Stab/Slash/Weapon" index="0"]

position = Vector2( -13, 0 )
build_mode = 0
polygon = PoolVector2Array( -17, 2, -17, 5, -12, 6, -10, 7, -6, 8, 11, 14, 11, 31, 31, 31, 36, 31, 41, 30, 43, 26, 41, 21, 35, 14, 33, 12, 27, 7, 14, 3, 7, 2, 1, 2, -7, 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="StabEffect" type="Sprite" parent="Sprite/Stab" index="1"]

visible = false
position = Vector2( 14, 7 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false
hframes = 5
frame = 1
region_enabled = true
region_rect = Rect2( 110, 55, 18, 8 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Walk" type="Sprite" parent="Sprite" index="1"]

visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 5 )
offset = Vector2( 0, -16 )
hframes = 3
frame = 2
_sections_unfolded = [ "Animation", "Material", "Offset", "Visibility" ]

[node name="Jump" type="Sprite" parent="Sprite" index="2"]

visible = false
position = Vector2( 0, 11 )
texture = ExtResource( 6 )
offset = Vector2( 0, -16 )
hframes = 5
frame = 3
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="Idle" type="Sprite" parent="Sprite" index="3"]

texture = ExtResource( 7 )
offset = Vector2( 0, -16 )
hframes = 8
frame = 7
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="Hurt" type="Sprite" parent="Sprite" index="4"]

visible = false
texture = ExtResource( 8 )
offset = Vector2( 0, -16 )
hframes = 4
frame = 3
_sections_unfolded = [ "Animation", "Visibility" ]

[node name="Die" type="Sprite" parent="Sprite" index="5"]

visible = false
texture = ExtResource( 9 )
offset = Vector2( 0, -16 )
hframes = 8
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="UpStab" type="Sprite" parent="Sprite" index="6"]

visible = false
texture = ExtResource( 10 )
offset = Vector2( 0, -16 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Duck" type="Sprite" parent="Sprite" index="7"]

visible = false
texture = ExtResource( 11 )
offset = Vector2( 0, -16 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sound" type="Node" parent="." index="6"]

[node name="Stab" type="AudioStreamPlayer" parent="Sound" index="0"]

stream = ExtResource( 12 )
volume_db = 0.05
pitch_scale = 0.4
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hurt" type="AudioStreamPlayer" parent="Sound" index="1"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Footsteps" type="AudioStreamPlayer" parent="Sound" index="2"]

stream = ExtResource( 14 )
volume_db = -8.1
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Jump" type="AudioStreamPlayer" parent="Sound" index="3"]

stream = ExtResource( 15 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Dead" type="AudioStreamPlayer" parent="Sound" index="4"]

stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]

[connection signal="area_entered" from="Sprite/Stab/Slash/Weapon" to="Sprite/Stab/Slash/Weapon" method="_on_Weapon_area_entered"]


